--- a/arithmetic.html
+++ b/arithmetic.html
@@ -2,42 +2,75 @@
 <html>
  <head>
      <title>arithmetic.html</title>
+     <title>arithmetic.html</title>
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
  </head>
-<body>
+<body style="background-color: rgb(252, 236, 217);">
+    <div class="container">
+        <div class="container">
+        <nav class="navbar navbar-expand-md navbar-dark and bg-secondary">
+            <a class="navbar-brand" href="arithmetic.html" target="_self">arithmetic page</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active"><a class="nav-link" href="pass.html" target="_self">pass</a></li>
+                    <li class="nav-item active"> <a class="nav-link" href="car.html" target="_self">car</a></li>
+          </nav>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-12">
+                        <form class="form">
+                            <h1 class="display-4">Hey You are in arithmetic.html page</h1><hr>
+                     <h2>computes by Saivivek_Reddy_Kusukuntla</h2>
+                     <div class="form-group">
+                    <label for="first_num" class="label">Enter a number </label>
+                    <input type="number" id="first_num" class="form-control"
+                        value="10" placeholder="Enter a base">
+                    </div>
+                    <div class="form-group">
+                            <label for="Second_num" class="label">Enter Power </label>
+                            <input type="number" class="form-control" id="Second_num"
+                                value="2" placeholder="Enter an exponent">
+                     </div>
+                     <div class="form-group">
+                                <input type="button" class="btn btn-success btn-md"
+                        onclick="powers()" value="Compute">
+                    </div>
+                        <p class="text-warning" id="result">This text will be replaced</p>
 
-<form>
-    <h2>computes by Saivivek_Reddy_Kusukuntla</h2>
-   
-    <label for="first_num" class="label">Enter a number </label>
-     <input type="number" id="first_num" class="form-control"
-        value="10" placeholder="Enter a base">
 
-            <label for="Second_num" class="label">Enter Power </label>
-            <input type="number" class="form-control" id="Second_num"
-                value="2" placeholder="Enter an exponent">
+                    <form>
+                        <button onclick="location.reload();"><span class="spinner-grow spinner-grow-sm"></span>Hit here! for clear Results</button>
+                    <hr>
+                    <input type="radio" id="plus" name="operation" onclick="processRadio()" value="plus"> 
+                <label for="plus">+</label>
+                     </br>
+                    <input type="radio" id="minus" name="operation" onclick="processRadio()" value="minus">
+                    <label for="minus">-</label>
+                    </br>
+                    <input type="radio" id="times" name="operation" onclick="processRadio()" value="times">
+                    <label for="times">*</label>
+                    </br>
+                    <input type="radio" id="divide" name="operation" onclick="processRadio()" value="divide">
+                    <label for="divide">/</label>
+                    </br>   
+                    </form>
 
-                <input type="button" class="btn btn-success btn-md"
-        onclick="powers()" value="Compute">
-    
-         <p class="text-warning" id="result">This text will be replaced</p>
-
-
-    <form>
-    <input type="radio" id="plus" name="operation" onclick="processRadio()" value="plus"> 
-<label for="plus">+</label>
-    </br>
-    <input type="radio" id="minus" name="operation" onclick="processRadio()" value="minus">
-    <label for="minus">-</label>
-    </br>
-    <input type="radio" id="times" name="operation" onclick="processRadio()" value="times">
-    <label for="times">*</label>
-    </br>
-    <input type="radio" id="divide" name="operation" onclick="processRadio()" value="divide">
-    <label for="divide">/</label>
-    </br>   
-    </form>
-
-        <p id="answer" class="text-info">The text will display here</p>
+                        <p id="answer" class="text-info">The text will display here</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 <script> 
 
