--- a/arithmetic.html
+++ b/arithmetic.html
@@ -71,7 +71,7 @@
             </div>
         </div>
     </div>
-
+    <button onclick="location.reload();"><span class="spinner-grow spinner-grow-sm"></span>Hit here! for clear Results</button><hr>
 <script> 
 
 let result = " ";
